<resources>
    <string name="app_name"> FleetManagementSystem</string>


    <string name="something_wrong">Something went wrong.</string>
    <string name="no_data">There is no data.</string>

    <!--<string name="map_key">AIzaSyDYuZsQ5D-jWYllij2jtuQcrLuDrKCJsLs</string>-->
    <string name="map_key">AIzaSyDhBSEtAWGJgyW8JStUCUBIpIcH2GtEv3c</string>
    <!--<string name="map_key">AIzaSyB7xf70bRy04728Hl5aupDEkJ51jFX4m2M</string>-->
    <!--<string name="map_key">AIzaSyBbA5wrApWlzGEIl_UGv_EfSus-QwwDFcI</string>-->
    //Login Strings
    <string name="ForgotPassword_loginactivity">Forgot Password</string>
    <string name="or_loginactivity">|</string>
    <string name="ForgotUserId_loginactivity">Forgot User ID</string>
    <string name="Contactus_loginactivity">CONTACT US</string>
    <string name="FingerPrint_loginactivity">Fingerprint</string>
    <string name="Locations_loginactivity">LOCATIONS</string>
    <string name="Options_loginactivity">OPTIONS</string>
    <string name="termsandconditions_loginactivity">Terms &amp; Conditions</string>
    <string name="privacypolicy_loginactivity">Privacy Policy</string>
    <string name="userfield_loginactivity">Username</string>
    <string name="userpwd_loginactivity">Password</string>
    <string name="RememberMe_loginactivity">Remember Me</string>
    <string name="Login_loginactivity">LOGIN</string>
    <string name="submit_login">Submit</string>
    <string name="error_no_internet_connection">No Internet Connection</string>
    <string name="driver_co_driver">Driver/Co-Driver</string>
    <string name="driver_id">Driver id :</string>
    <string name="driver_name">Driver Name :</string>
    <string name="badge_no">Badge no. :</string>
    <string name="advance_and_expenses"><![CDATA[Advance & Expenses]]></string>
    <string name="takeover_from">Vehicle Takeover</string>
    <string name="shipment_execution">Shipment Execution</string>
    <string name="maintenance">Maintenance</string>
    <string name="handover_from">Vehicle Handover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fms">FMS</string>
    <string name="view">View</string>
    <string name="trip_id">Trip Id</string>
    <string name="trip">Trip</string>
    <string name="driver_trip">TRIP</string>
    <string name="load_id">Load Id</string>
    <string name="co_driver_id_name">కో-డ్రైవర్ ఐడి/పేరు</string>
    <string name="vehicle_reg_no">Vehicle Reg No.</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="trip_details">Trip Details</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="source_location">Source Location</string>
    <string name="driver_location">Driver Location</string>
    <string name="pickup_d_t"><![CDATA[Pickup D&T]]></string>
    <string name="deliver_d_t"><![CDATA[Deliver D&T]]></string>
    <string name="route_details">Route Details</string>
    <string name="back">Back</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="accept_for_trip_id">Do you want to Accept for Trip id -</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="petro_card">Petro Card</string>
    <string name="fastag">Fastag</string>
    <string name="cash_bank">Cash/Bank</string>
    <string name="tax_card">Tax Card</string>
    <string name="total_advance">Total Advance</string>
    <string name="create_date_time"><![CDATA[Create Date&Time]]></string>
    <string name="cap_from_mob">Capture from mobile</string>
    <string name="advance">Advance</string>
    <string name="toll_expenses">TOLL EXPENSES</string>
    <string name="toll_plazzo">Toll Plazzo Name</string>
    <string name="location">Location</string>
    <string name="capture_from_gps">Capture from GPS</string>
    <string name="amount">Amount</string>
    <string name="fastagcard_no">Fastagcard No.</string>
    <string name="bill_picture">Bill Picture</string>
    <string name="tax_type">Tax Type</string>
    <string name="ok">OK</string>
    <string name="tax_expenses">TAX EXPENSES</string>
    <string name="fuel_expenses">FUEL EXPENSES</string>
    <string name="fuel_exp">Fuel Expenses</string>
    <string name="petrocard_no">Petrocard No.</string>
    <string name="current_odometer">Current Odometer</string>
    <string name="fuel_station">Fuel Station</string>
    <string name="rote">Rate</string>
    <string name="quantity">Quantity</string>
    <string name="rate_quantity">Rate X Quantity</string>
    <string name="petro_machine">Petro Machine</string>
    <string name="fuel_bill">Fuel Bill</string>
    <string name="general_expenses">General expenses</string>
    <string name="general_exp">GENERAL EXPENSES</string>
    <string name="tax_percent">Tax %</string>
    <string name="tax">Tax</string>
    <string name="expense_name">Expense Name</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="description">Description</string>
    <string name="total_amount">Total Amount</string>
    <string name="rate">Rate</string>
    <string name="attachment">Attachment</string>
    <string name="discount">Discount %</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="fuel">Fuel</string>
    <string name="toll">Toll</string>
    <string name="report">Report</string>
    <string name="at_gate">At Gate</string>
    <string name="loading_ended">Loading Ended</string>
    <string name="km_at_gateout">KM at Gateout</string>
    <string name="placed_for_loading">Placed for Loading</string>
    <string name="document_received">Document Received</string>
    <string name="loading_start">Loading Start</string>
    <string name="gateout">Gateout</string>
    <string name="km_at_unloading">KM at unloading</string>
    <string name="unloading_ended">Unloading Ended</string>
    <string name="at_unloading_gate">At Unloading Gate</string>
    <string name="settlement">Settlement</string>
    <string name="unloading_started">Unloading Started</string>
    <string name="unloading_gateout">Unloading Gateout</string>
    <string name="document_id">Document Id</string>
    <string name="document_name">Document Name</string>
    <string name="document_type">Document Type</string>
    <string name="physical_document_handed_over">Physical document handed over</string>
    <string name="depo_id_name">Depo id:Name</string>
    <string name="scheduled_date_time"><![CDATA[Scheduled Date&Time]]></string>
    <string name="vehicle_takeover_handover">Vehicle Takeover/Handover</string>
    <string name="takeover">Takeover</string>
    <string name="handover">Handover</string>
    <string name="speedometer">Speedometer</string>
    <string name="front_vehicle_lights">Front part of the vehicle with all lights with break lights</string>
    <string name="back_vehicle_lights">Back part of the vehicle with all lights with break lights</string>
    <string name="tire_details">Tire Details</string>
    <string name="side_view_both">Side View(Both)</string>
    <string name="placed_gate">Are you sure to enter time stamp for Placed at gate</string>
    <string name="loading_end">Are you sure to enter time stamp for loading end.</string>
    <string name="place_loading">Are you sure to enter time stamp for place loading.</string>
    <string name="doc_received">Are you sure to enter time stamp for document received.</string>
    <string name="loading_start_time">Are you sure to enter time stamp for loading start.</string>
    <string name="gate_out">Are you sure to enter time stamp for gate out.</string>
    <string name="km_gate_out">Are you sure to enter Km gate out.</string>
    <string name="km_unloading">Are you sure to enter Km unloading.</string>
    <string name="unloading_end">Are you sure to enter time stamp for unloading end.</string>
    <string name="unloading_gate">Are you sure to enter time stamp for unloading gate out.</string>
    <string name="unloading_start">Are you sure to enter time stamp for unloading start.</string>
    <string name="pod_received">Are you sure to enter time stamp for POD received.</string>
    <string name="settlement_time">Are you sure to enter time stamp for settlement.</string>
    <string name="gate_entry">Are you sure to enter time stamp for Placed at gate entry</string>
    <string name="vehicle_placed_">Are you sure to enter time stamp for Vehicle Placed</string>
    <string name="driver_test">Are you sure to enter time stamp for Driver Test</string>
    <string name="driver_status">Please select status after test driver</string>
    <string name="url">URL</string>
    <string name="url_please">Please enter URL here</string>
    <string name="submit">Submit</string>

    <string name="trip_details_adapter">Trip Id,Source,Destination,Pickup,Delivery</string>
    <string name="enter_data">Please Enter data !</string>
    <string name="balance">Balance</string>
    <string name="maintenance_closure">Maintenance Closure</string>
    <string name="lr_pod">LR/POD</string>
    <string name="test_drive_status">Test Drive Status</string>
    <string name="test_drive">Test Drive</string>
    <string name="vehicle_placed">Vehicle Placed</string>
    <string name="work_order_id">Work Order Id</string>
    <string name="vehicle_id">Vehicle Id</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="i_agree_that_the_above_electronic_signature_is_mine">I agree that the above electronic signature is mine.</string>
    <string name="save">save</string>
    <string name="clear">Clear</string>
    <string name="toll_exp">Toll Expenses</string>
    <string name="advance_exp">Advance Details</string>
    <string name="tax_exp">Tax Expenses</string>
    <string name="select_trip_id">Please Select Trip Id</string>
    <string name="trip_home">Trips</string>
    <string name="bad_crediential">Bad Credentials</string>
    <string name="enter_username">Please enter email address.</string>
    <string name="enter_valid_email">Please enter valid email address.</string>


</resources>