<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/two_dp"
            android:elevation="@dimen/one_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/load_id"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/load_id" />

                <TextView
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:id="@+id/sourceLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/source_location" />

                <TextView
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:id="@+id/driverLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/driver_location" />

                <TextView
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:id="@+id/pickupTAndD"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pickup_d_t" />

                <TextView
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:id="@+id/deliveryTAndD"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deliver_d_t" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <View
            android:background="@color/black"
            android:layout_marginTop="@dimen/two_dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

    </LinearLayout>
</layout>
