<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.user.driver.shipment_exceuption.ShipmentLoadingFragment">

        <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/five_dp"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginRight="@dimen/five_dp"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/trip_id"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:background="@color/purple_200"
                android:gravity="left">

                <Spinner
                    android:id="@+id/spinnerTripsIds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:gravity="left" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/five_dp"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/load_id"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:background="@color/purple_200"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spinnerTripsLoads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/ten_dp">

                <Button
                    android:id="@+id/atGate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_light_brown_button"
                    android:text="@string/at_gate"
                    android:textAllCaps="false" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/ten_dp">

                <Button
                    android:id="@+id/loadingEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_light_brown_button"
                    android:text="@string/loading_ended"
                    android:textAllCaps="false" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/ten_dp">

                <Button
                    android:id="@+id/kmGateout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_light_brown_button"
                    android:text="@string/km_at_gateout"
                    android:textAllCaps="false" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/ten_dp">

                <Button
                    android:id="@+id/placeLoading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_light_brown_button"
                    android:text="@string/placed_for_loading"
                    android:textAllCaps="false" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/ten_dp">

                <Button
                    android:id="@+id/atDocument"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_light_brown_button"
                    android:text="@string/document_received"
                    android:textAllCaps="false" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:visibility="invisible"
                app:cardCornerRadius="@dimen/ten_dp">

                <Button
                    android:id="@+id/takeover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_light_brown_button"
                    android:text="@string/takeover"
                    android:visibility="invisible" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/ten_dp">

                <Button
                    android:id="@+id/loadingStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_light_brown_button"
                    android:text="@string/loading_start"
                    android:textAllCaps="false" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/ten_dp">

                <Button
                    android:id="@+id/gateout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_light_brown_button"
                    android:text="@string/gateout"
                    android:textAllCaps="false" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:visibility="invisible"
                app:cardCornerRadius="@dimen/ten_dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_light_brown_button"
                    android:visibility="invisible" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</layout>
