<?xml version="1.0" encoding="utf-8"?>

<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_margin="@dimen/ten_dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.user.driver.shipment_exceuption.ShipmentDocumentFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_marginTop="@dimen/ten_dp"
                    android:weightSum="4"
                    android:layout_marginBottom="@dimen/twenty_dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/five_dp"
                        android:layout_marginTop="@dimen/five_dp"
                        android:layout_marginRight="@dimen/five_dp"
                        android:gravity="center_vertical"
                        android:layout_weight="0.7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/trip_id" />
                    <LinearLayout
                        android:layout_weight="1.3"
                        android:background="@color/purple_200"
                        android:gravity="left"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <Spinner
                            android:gravity="left"
                            android:layout_margin="@dimen/five_dp"
                            android:id="@+id/spinnerTripsIds"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/five_dp"
                        android:layout_marginTop="@dimen/five_dp"
                        android:gravity="center_vertical"
                        android:layout_weight="0.7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/load_id" />
                    <LinearLayout
                        android:layout_weight="1.3"
                        android:background="@color/purple_200"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <Spinner
                            android:gravity="center"
                            android:layout_margin="@dimen/five_dp"
                            android:id="@+id/spinnerTripsLoads"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/five_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:text="@string/document_id"
                        android:textColor="@color/black" />

                    <EditText
                        android:padding="@dimen/five_dp"
                        android:id="@+id/documentId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/round_border_gray"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:text="@string/document_name"
                        android:textColor="@color/black" />

                    <EditText
                        android:padding="@dimen/five_dp"
                        android:id="@+id/documentName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/round_border_yellow_bg"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/five_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:text="@string/document_type"
                        android:textColor="@color/black" />

                    <EditText
                        android:padding="@dimen/five_dp"
                        android:id="@+id/documentType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/round_border_yellow_bg"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_marginRight="@dimen/five_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:text="@string/attachment"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_marginLeft="@dimen/twenty_dp"
                        android:src="@drawable/ic_camera_alt_24"
                        android:padding="@dimen/five_dp"
                        android:id="@+id/captureDoc"
                        android:layout_width="@dimen/forty_dp"
                        android:layout_height="@dimen/forty_dp"
                        android:textColor="@color/black" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/attachedDoc"
                    android:src="@drawable/new_background"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/three_hundredDp"/>

                <TextView
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:layout_marginRight="@dimen/five_dp"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/physical_document_handed_over" />

                <LinearLayout
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:checked="true"
                            android:id="@+id/yes"
                            android:layout_marginLeft="@dimen/twenty_dp"
                            android:text="@string/yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <RadioButton
                            android:id="@+id/no"
                            android:layout_marginLeft="@dimen/twenty_dp"
                            android:text="@string/no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>



                </LinearLayout>

                <Button
                    android:id="@+id/ok"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"
                    android:layout_gravity="right"
                    android:text="@string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/forty_dp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>
